--- a/Practice01/src/style/base/typo.css
+++ b/Practice01/src/style/base/typo.css
@@ -1,4 +1,4 @@
 @font-face {
     font-family: 'Inter',  sans-serif;
-    src: url(../../fonts/Inter-Regular.ttf);
+    src: url(../../fonts/static/Inter-Regular.ttf);
 }
