--- a/Practice01/src/index.css
+++ b/Practice01/src/index.css
@@ -1,7 +1,9 @@
-@import url("../src/style/abstracts/varibles.css");
+@import url("../src/style/base/reset.css");
 @import url("../src/style/base/typo.css");
+@import url("../src/style/abstracts/varibles.css");
 
-.container{
+
+.container {
   width: 1440px;
   height:4699px;
   font-family:'Inter', sans-serif ;
@@ -9,62 +11,71 @@
   position: relative;
 }
 
-body{
+body {
     font-family: 'Inter', sans-serif;
-    color: #35414B;
+    color: var(--Limed-Spruce);
 }
-.banner{
+
+.banner {
   background-image: url(./assets/image/bgbanner.png);
   height: 800px;
   border: 1px;
   margin-top: -9px;
   z-index:-2
 }
-header{
+
+header {
     display:flex;
     align-items: center;
 }
-.header__logo{
+
+.header__logo {
   margin-top: 60px;
   margin-left: 165px;
 }
-.header_navlist li{
-    text-decoration: none;
-    color: #35414B;
-    font-size: 16px;
-    font-weight: 400;
-    opacity:0.7;
-    line-height: 16px;
-    display: inline;
+
+.header__nav-list li {
+  text-decoration: none;
+  color: var(--Limed-Spruce);
+  font-size: 16px;
+  font-weight: 400;
+  opacity:0.7;
+  line-height: 16px;
+  display: inline;
 }
-.header__logo{
-  color: #1D2830;
-font-size: 24px;
-font-family: Josefin Sans;
-font-style: normal;
-font-weight: 400;
-line-height: 24px;
-letter-spacing: -1.44px;
-width: 92px;
-height: 24px;
-margin-top: 60px;
-margin-left: 165px;
+
+.header__logo {
+  color: var(--Ebony-Clay);
+  font-size: 24px;
+  font-family: Josefin Sans;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: -1.44px;
+  width: 92px;
+  height: 24px;
+  margin-top: 60px;
+  margin-left: 165px;
 }
-nav li:hover{
+
+nav li:hover {
     color: black
 }
-.header_nav{
+
+.header__nav {
   display: flex;
   margin-top: 38px;
   margin-left: 195px;
 }
-.header__login-getfree{
+
+.header__login-get-free {
   margin-top: 38px;
   margin-left: 70px;
 }
-.header__login-getfree a{
+
+.header__login-get-free a {
   text-decoration: none;
-  color:#35414B;
+  color: var(--Limed-Spruce);
   font-size: 16px;
   font-weight: 400;
   opacity:0.7;
@@ -72,40 +83,42 @@ nav li:hover{
   margin-top: 64px;
   padding: 16px 24px 16px 23px;
 }
- a.active{
+
+ a.active {
   background-color: #ECE5FF;
-  color:#794CFF;
-  color: #794CFF;
+  color: var(--Violet);
   text-align: center;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 16px;
   padding:15px 25px;
-
 }
-.active{
+
+.active {
   width: 169px;
   height: 48px;
   border-radius:4px;
 }
-.banner__signup{
+
+.banner__sign-up {
  display:flex;
  align-items: center;
-
 }
-.banner__simpletext{
+
+.banner__simple-text {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
-  color: #4E5A65;
+  color: var(--River-Bed);
   width: 505px;
   height: 48px;
   margin-left: 467px;
 }
-.banner__save{
+
+.banner__save {
   border-radius: 100px;
   width:108px;
   height: 32px;
@@ -118,12 +131,12 @@ nav li:hover{
   align-items: center;
 }
 
-.banner__save p, .banner__getacc p{
+.banner__save p, .banner__get-acc p {
   margin-top: 5px;
   margin-left: 9px;
 }
 
-.banner__getacc{
+.banner__get-acc {
   width: 209px;
   height: 32px;
   border-radius: 0px 100px 100px 0px;
@@ -132,8 +145,9 @@ nav li:hover{
   margin-left:-29px;
   margin-top: 90px;
 }
-h1{
-  color:#35414B;
+
+h1 {
+  color: var(--Limed-Spruce);
   font-family:'Inter', sans-serif;
   text-align: center;
   font-weight: 700;
@@ -144,18 +158,9 @@ h1{
   margin: 24px 0 24px 337px;
 }
 
-.banner__simpletext{
-  width: 505px;
-  height: 48px;
-  color: #4E5A65;
-  text-align: center;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  margin-left: 467px;
-}
-#text{
+
+
+#text {
   width: 319px;
   height: 52px;
   margin-left: 480px;
@@ -163,7 +168,8 @@ h1{
   background-color:  #FFFFFF;
   border: 1px solid #E1E5EA;
 }
-::placeholder{
+
+::placeholder {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -171,58 +177,71 @@ h1{
   color: #97A5B5;
   padding: 18px 99px 18px 24px;
 }
-#submit{
+
+#submit {
   width: 164px;
   height: 52px;
   border-radius: 0px 4px 4px 0px;
   border: 1px;
-  background-color: #794CFF;
+  background-color: var(--Violet);
   color: #FFFFFF;
   margin-left: -5px;
 }
-.banner__box{
+
+.banner__box {
   margin-top: 20px;
 }
-.graph{
+
+.graph {
   width: 920px;
   height: 654.29px;
   margin-left: 222px;
-  margin-top: 20px}
-.medialogo p {
+  margin-top: 20px
+}
+
+.banner__media-logo p {
   font-family: 'Inter', sans-serif ;
   font-size: 16px;
   line-height: 16px;
   text-align: center;
-  color: #4E5A65;
+  color: var(--River-Bed);
   margin-top: 130.71px;
 }
-.banner__logo{
+
+.banner__logo {
   display: flex;
   margin-top: -33px;
 
 }
+
 .gg, .fb, .air, .hub, .slack {
  margin-right: 132px;
 }
-.gg{
+
+.gg {
   margin-top: 24px;
   margin-left: 250px;
 }
-.air{
+
+.air {
   margin-top:25px;
 }
-.fb{
+
+.fb {
   margin-top: 29px;
 }
-.hub{
+
+.hub {
   margin-top: 26px;
   margin-left: 9px;
 }
-.slack{
+
+.slack {
   margin-top: 27px;
   margin-left: 9px;
 }
-.introproduct {
+
+.content-area__intro-product {
   background-image: url(./assets/image/bgintro.png);
   width: 1505;
   height: 640px;
@@ -230,71 +249,82 @@ h1{
   z-index: -1;
   display:flex
 }
-.timeline{
+
+.timeline {
   width: 657px;
   height: 518px;
   margin-left: 165px;
   border-radius: 4px;
   margin-top: 61px;
 }
-.advantage{
+
+.advantage {
   margin-left: 80px;
 }
-.ad-feature p, .survey-feature p{
+
+.ad-feature p, .survey-feature p {
   width: 308px;
   margin-top: -18px;
 }
+
 .ad-feature p,.ad-feature h4 {
   margin-left: 33px;
 }
-.ad-feature h4, .survey-feature h4{
+
+.ad-feature h4, .survey-feature h4 {
   margin-top: 26px;
 }
-.survey-feature h4, .survey-feature p{
+
+.survey-feature h4, .survey-feature p {
   margin-left: 24px;
 }
-.introproduct p{
-  color: #4E5A65;
+
+.content-area__intro-product p {
+  color: var(--River-Bed);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
 }
-.text{
+
+.text {
   transform: translateY(35%);
 }
 
-h4{
+h4 {
   font-size: 18px;
 }
-.survey-feature{
+
+.survey-feature {
   background-color: #f6f3fc;
-  border-left: 8px solid #794CFF;
+  border-left: 8px solid var(--Violet);
   width: 372px;
   height: 128px;
   margin-top: 77px;
   border-radius: 0px 8px 8px 0px;
 }
-.line{
+
+.line {
   margin-top: 8px;
   margin-left: 10px;
 }
-.functions {
+
+.content-area__functions {
   display: flex;
   flex-wrap: wrap;
 }
 
-
-h5{
+h5 {
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   font-weight:600;
   line-height: 18px;
-  color:#35414B;
+  color:var(--Limed-Spruce);
   width: 213px;
   height:18px;
   margin-top: 27px;
 }
+
 .feature p {
   font-family: 'Inter', sans-serif;
   width: 306px;
@@ -302,51 +332,59 @@ h5{
   font-weight:400px;
   font-size: 16px;
   line-height: 24px;
-  color:#4E5A65;
+  color:var(--River-Bed);
   margin-top: -25px;
 }
-h2{
+
+h2 {
   font-family:'Inter', sans-serif;
   font-weight: 600px;
   font-size:40px;
   line-height:48px;
   margin-left: 506px;
 }
-  .functions{
+
+.content-area__functions {
   display: flex;
   flex-wrap: wrap;
 }
-.row{
+
+.row {
   display: flex;
   flex-direction: column;
   margin-top: 12px;
   margin-left: 165px;
 }
 
-.row1, .row2{
+.row1, .row2 {
   display: flex;
 }
-.row2{
+
+.row2 {
   margin-top: 65px;
 }
-.feature{
+
+.feature {
   margin-right: 125px;
 }
-.aboutus-content h2, .functions h2 {
+
+.about-us-content h2, .content-area__functions h2 {
   margin-top: 100px;
 }
 
-.charts{
+.content-area__charts {
   margin-top: 86px;
   background-image: url(./assets/image/bgcharts.png);
   width: 1505px;
   height: 540px;
   display: flex;
 }
-.chart__content h2, .chart__content p, button, .install-section {
+
+.chart__content h2, .chart__content p, button, .content-area__install-section {
   margin-left: 165px;
  }
-.chart__content h2{
+
+.chart__content h2 {
   width: 341px;
   height: 96px;
   font-family: 'Inter', sans-serif;
@@ -355,15 +393,17 @@ h2{
   line-height: 48px;
   margin-top: 130px;
 }
-.chart__content p{
+
+.chart__content p {
   line-height: 24px;
   margin-top: -6px;
-  color: #4E5A65;
+  color: var(--River-Bed);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
 }
-button{
+
+button {
   width: 164px;
   height: 52px;
   border-radius: 4px;
@@ -373,18 +413,20 @@ button{
   border: none;
   margin-top: 13px;
 }
-.charts img{
+
+.content-area__charts img {
   margin-top: 67px;
   margin-left: 90px;
 }
 
-.aboutus-content h2{
+.about-us-content h2 {
   text-align: center;
   width: 394px;
   height: 96px;
   margin-left: 520px;
 }
-.aboutus-content p {
+
+.about-us-content p {
   width: 543px;
   height: 96px;
   font-weight: 400;
@@ -394,38 +436,44 @@ button{
   margin-left: 463px;
   margin-top: 48px;
 }
-.customers-feedbacks{
+
+.customers-feedbacks {
   margin-left:260px ;
   display: flex;
 }
-.customer-pro{
+
+.customer-pro {
   display: flex;
   margin-right: 149px;
   margin-top: 21px;
 }
-.name-job{
+
+.name-job {
   margin-left: 16px;
   margin-top: -9px;
 }
-.name, .job{
-   font-size: 16px;
+
+.name, .job {
+  font-size: 16px;
   line-height: 16px;
-  color: #4E5A65;
-
+  color: var(--River-Bed);
 }
-.name{
+
+.name {
   font-weight: 600;
-
 }
-.job{
+
+.job {
   margin-top: -8px;
   font-weight: 400;
 }
-.customer-ava{
+
+.customer-ava {
   width: 48px;
   height: 48px;
 }
-.install-section{
+
+.content-area__install-section {
   background-image: url(./assets/image/install-section.png);
   width: 1110px;
   height: 224px;
@@ -433,6 +481,7 @@ button{
   display: flex;
   margin-top: 85px;
 }
+
 h3 {
   font-family: 'Inter',sans-serif;
   font-weight: 600;
@@ -442,53 +491,63 @@ h3 {
   margin-top: 64px;
   margin-left: 83px;
 }
-.install-app{
+
+.install-app {
   margin-left: 140px;
   margin-top: 85px;
 }
-.ggplay{
+
+.ggplay {
   margin-right: 20px;
 }
-footer{
-  width: 1505px;
+
+footer {
+  width: 100%;
   height: 417px;
-  background-color: #1D2830;
+  background-color: var(--Ebony-Clay);
   margin-top: 100px;
 }
-.column{
+
+.column {
   display: flex;
   margin-left: 165px;
 }
-.column1 , .column2, .column3, .column4  {
+
+.column1 , .column2, .column3, .column4 {
   margin-top: 46px;
   margin-right: 140px
 }
+
 .column2 {
   margin-right: 158px;
 }
+
 .column1 ul, .column2 ul , .column3 ul {
   list-style-type: none;
   margin:0;
   padding:0;
 }
+
 .column1 ul li , .column2 ul li , .column3 ul li {
   padding-bottom: 24px;
   width: 128px;
   height: 16px;
 }
-.column1 ul li a, .column2 ul li a, .column3 ul li a{
+
+.column1 ul li a, .column2 ul li a, .column3 ul li a {
   text-decoration: none;
   color: #fff;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
-
 }
-.column4{
+
+.column4 {
   margin-left: 48px;
   margin-top: 45px;
 }
-h6{
+
+h6 {
   font-family: 'Inter', sans-serif;
   font-weight: 600;
   font-size: 16px;
@@ -496,29 +555,34 @@ h6{
   color: #fff;
   margin-bottom:24px;
 }
-.footer__ggplay{
+
+.footer__gg-play {
   margin-bottom: 16px;
 }
-.footer__appstore{
+
+.footer__app-store{
   display: flex;
 }
-.copy-right{
+
+.copy-right {
   display: flex;
 }
-.copy-right p{
+
+.copy-right p {
   margin-left: 172px;
   margin-top: 25px;
-  color: var(--text-gray-300, #D9DBE1);
+  color: #D9DBE1;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 14px;
-
 }
-.social-icon{
+
+.social-icon {
   margin-left: 349px;
   margin-top: -8px;
 }
-.icon{
+
+.icon {
  padding: 24px 20px 24px 0;
 }
