--- a/Practice01/src/index.css
+++ b/Practice01/src/index.css
@@ -330,7 +330,7 @@ h2 {
   font-weight: 600;
   font-size:40px;
   line-height:40px;
-  margin-left: -3px;
+  margin-left: -5px;
   color: var(--Limed-Spruce);
   text-align: center;
   font-style: normal;
@@ -340,13 +340,14 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-left: 165px;
-  margin-top: 10px;
+  margin-left: 80px;
 }
 
 .feature {
   width: 23%;
   display: inline-block;
+  padding: 36px;
+  margin: 0px 10px 10px 5px;
 }
 
 .feature p {
@@ -355,6 +356,7 @@ font-weight:400px;
 font-size: 16px;
 line-height: 24px;
 color:var(--River-Bed);
+margin: 6px 0px 0px 4px;
 
 }
 
@@ -364,16 +366,16 @@ font-size: 18px;
 font-weight:600;
 line-height: 18px;
 color:var(--Limed-Spruce);
-margin-top: 10px;
-margin-left: 2px;
+margin-top: 25px;
+margin-left: 6px;
 }
 
 .content-area__functions h2 {
-  margin-top: 103px;
+  margin-top: 100px;
 }
 
 .content-area__charts {
-  margin-top: 28px;
+  margin-top: 55px;
   background-image: url(./assets/image/bgcharts.png);
   width: 1505px;
   height: 540px;
@@ -392,6 +394,7 @@ margin-left: 2px;
   font-weight: 600;
   line-height: 48px;
   margin-top: 132px;
+  text-align: left;
 }
 
 .chart__content p {
@@ -411,7 +414,7 @@ button {
   color:#FFFFFF;
   font-size: 16px;
   border: none;
-  margin-top: 32px;
+  margin-top: 30px;
   cursor: pointer;
 }
 
@@ -421,10 +424,9 @@ button {
 }
 
 .about-us-content h2 {
-  text-align: center;
   width: 394px;
   height: 96px;
-  margin-left: 520px;
+  margin-left: 522px;
   margin-top: 100px;
   line-height: 48px;
 }
@@ -437,7 +439,7 @@ button {
   line-height: 32px;
   text-align: center;
   margin-left: 463px;
-  margin-top: 48px;
+  margin-top: 49px;
 }
 
 .customers-feedbacks {
@@ -447,13 +449,13 @@ button {
 
 .customer-pro {
   display: flex;
-  margin-right: 149px;
+  margin-right: 148px;
   margin-top: 30px;
   cursor: pointer;
 }
 
 .name-job {
-  margin-left: 15px;
+  margin-left: 16px;
 }
 
 .name, .job {
@@ -470,13 +472,13 @@ button {
 .job {
   font-weight: 400;
   margin-top: 7px;
-  margin-left: -1px
+  margin-left: -2px
 }
 
 .customer-ava {
   width: 48px;
   height: 48px;
-  margin-left: 2px;
+  margin-left: 1px;
   margin-top: -4px;
 }
 
@@ -486,7 +488,7 @@ button {
   height: 224px;
   border-radius: 16px;
   display: flex;
-  margin-top: 97px;
+  margin-top: 98px;
 }
 
 h3 {
@@ -517,7 +519,7 @@ footer {
   width: 100%;
   height: 417px;
   background-color: var(--Ebony-Clay);
-  margin-top: 102px;
+  margin-top: 100px;
 }
 
 .footer__content {
@@ -558,7 +560,7 @@ footer {
 
 .app {
   margin-left: 49px;
-  margin-top: 82px;
+  margin-top: 81px;
 }
 
 h6 {
@@ -595,8 +597,8 @@ h6 {
 }
 
 .social-icon {
-  margin-left: 351px;
-  margin-top: -9px;
+  margin-left: 350px;
+  margin-top: -8px;
 }
 
 .icon {
