--- a/Practice01/src/index.css
+++ b/Practice01/src/index.css
@@ -5,10 +5,9 @@
 
 .container {
   width: 1440px;
-  height:4699px;
+  height: auto;
   font-family:'Inter', sans-serif ;
   margin: auto;
-  position: relative;
 }
 
 body {
@@ -21,12 +20,17 @@ body {
   height: 800px;
   border: 1px;
   margin-top: -9px;
-  z-index:-2
 }
 
 header {
-    display:flex;
-    align-items: center;
+  display:flex;
+  align-items: center;
+  height: 160px;
+  justify-content: space-evenly;
+}
+
+.header__nav-list {
+  margin-left: 27px;
 }
 
 .header__nav-list li {
@@ -38,6 +42,7 @@ header {
   line-height: 16px;
   display: inline;
   cursor: pointer;
+  margin:0px 10px 0px 3px;
 }
 
 .header__logo {
@@ -50,9 +55,8 @@ header {
   letter-spacing: -1.44px;
   width: 92px;
   height: 24px;
-  margin-top: 67px;
-  margin-left: 165px;
   cursor: pointer;
+  margin-right: 30px;
 }
 
 nav li:hover {
@@ -61,13 +65,6 @@ nav li:hover {
 
 .header__nav {
   display: flex;
-  margin-top: 68px;
-  margin-left: 234px;
-}
-
-.header__login-get-free {
-  margin-top: 68px;
-  margin-left: 73px;
 }
 
 .header__login-get-free a {
@@ -77,7 +74,7 @@ nav li:hover {
   font-weight: 400;
   opacity:0.7;
   line-height: 16px;
-  padding: 16px 13px 16px 23px;
+  margin-left: 10px;
 }
 
 .header__login-get-free a.active:hover {
@@ -106,19 +103,18 @@ nav li:hover {
 }
 
 .banner__sign-up {
- align-items: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.banner__simple-text {
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  text-align: center;
-  color: var(--River-Bed);
-  width: 505px;
-  height: 48px;
-  margin-left: 460px;
+.banner__discount {
+  display: flex;
+  justify-content: center;
+  height: 75px;
+  width: 100%;
+  align-items: flex-end;
 }
 
 .banner__get-acc {
@@ -133,22 +129,20 @@ nav li:hover {
   font-style: normal;
   font-weight: 400;
   line-height: 16px;
-  margin-left:644px;
-  margin-top: -32px;
   cursor: pointer;
+  margin-left: -20px;
 }
 
 .banner__save {
   border-radius: 100px;
   width:108px;
   height: 32px;
-  margin-left: 577px;
   text-align: center;
-  margin-top: 112px;
   background-color: #81C43B;
   color:white;
-  align-items: center;
   z-index: 1;
+  position: sticky;
+  margin-left: 11px;
 }
 
 .banner__save p, .banner__get-acc p {
@@ -162,6 +156,15 @@ nav li:hover {
   border-radius: 0px 100px 100px 0px;
 }
 
+.banner__content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 267px;
+  gap:23px
+}
+
 h1 {
   color: var(--Limed-Spruce);
   font-family:'Inter', sans-serif;
@@ -171,18 +174,31 @@ h1 {
   line-height: 72px;
   width: 766px;
   height: 144px;
-  margin: 24px 0 24px 328px;
+  margin-left: -18px;
+}
+
+.banner__simple-text {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: var(--River-Bed);
+  width: 505px;
+  height: 48px;
+  margin-left: -15px;
 }
 
 .banner__box {
-  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  margin: -2px 0px 0px -3px;
+  height: 63px;
 }
 
 #text {
   width: 319px;
   height: 52px;
-  margin-left: 480px;
-  margin-top: 3px;
   border-radius: 4px 0px 0px 4px;
   background-color:  #FFFFFF;
   border: 1px solid #E1E5EA;
@@ -204,7 +220,7 @@ h1 {
   border: 1px;
   background-color: var(--Violet);
   color: #FFFFFF;
-  margin-left: -9px;
+  margin-left: -4px;
   cursor: pointer;
   font-size: 16px;
   font-weight: 500;
@@ -218,8 +234,15 @@ h1 {
 }
 
 .graph {
-  margin-left: 222px;
-  margin-top: 13px;
+  margin-left: -35px;
+}
+
+.banner__media-logo {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  height: 191px;
+  width: 100%;
 }
 
 .banner__media-logo p {
@@ -228,7 +251,6 @@ h1 {
   line-height: 16px;
   text-align: center;
   color: var(--River-Bed);
-  margin-top: 150.71px;
   font-weight: 400;
   letter-spacing: 0em;
 }
@@ -243,8 +265,30 @@ h1 {
 
 .banner__logo {
   display: flex;
-  margin-top: -20px;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  margin-top: 8px;
+}
+
+.gg {
+  margin-left: 75px;
+}
+
+.air {
+  margin-left: 35px;
+}
+
+.fb {
+  margin-left: -6px;
+  margin-top: 2px;
+}
+
+.hub {
+  margin-left: -40px;
+}
+
+.slack {
+  margin-left: -75px;
+  margin-top: 2px;
 }
 
 .gg, .air, .fb, .hub, .slack {
@@ -255,38 +299,14 @@ h1 {
   transform:scale(1.3);
 }
 
-.gg {
-  margin-top: 24px;
-  margin-left: 250px;
-}
-
-.air {
-  margin-top:25px;
-  margin-left: 123px;
-}
-
-.fb {
-  margin-top: 29px;
-  margin-left: -6px;
-}
-
-.hub {
-  margin-top: 26px;
-  margin-left: -128px;
-}
-
-.slack {
-  margin-top: 27px;
-  margin-left: -249px;
-}
-
 .content-area__intro-product {
   background-image: url(./assets/image/bgintro.png);
-  width: 1505;
+  width: 100%;
   height: 640px;
-  margin-top: 125px;
-  z-index: -1;
-  display:flex
+  display:flex;
+  margin-top: 38px;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .content-area__intro-product p {
@@ -298,13 +318,8 @@ h1 {
 }
 
 .timeline {
-  margin-left: 165px;
   border-radius: 4px;
-  margin-top: 61px;
-}
-
-.advantage {
-  margin-left: 245px;
+  margin-left: 34px;
 }
 
 .survey-feature {
@@ -312,25 +327,23 @@ h1 {
   border-left: 8px solid var(--Violet);
   width: 368px;
   height: 128px;
-  margin-top: 77px;
   border-radius: 0px 8px 8px 0px;
+  margin-left: -16px;
+}
+
+.advantage {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 27px;
 }
 
 .ad-feature p, .survey-feature p {
   width: 308px;
-  margin-top: 4px;
 }
 
 .ad-feature p,.ad-feature h4 {
-  margin-left: 33px;
-}
-
-.ad-feature h4 {
-  margin-top: 23px;
-}
-
-.survey-feature h4 {
-  margin-top: -1px;
+  margin-left: 16px;
 }
 
 .survey-feature h4, .survey-feature p {
@@ -370,6 +383,18 @@ h2 {
   font-style: normal;
 }
 
+.content-area__functions {
+  display: flex;
+  flex-direction: column;
+  height: 648px;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.functions-heading {
+  margin-top: 100px;
+}
+
 .feature__container {
   display: flex;
   flex-wrap: wrap;
@@ -403,21 +428,25 @@ margin-top: 25px;
 margin-left: 6px;
 }
 
-.content-area__functions h2 {
-  margin-top: 100px;
-}
-
 .content-area__charts {
   margin-top: 52px;
   background-image: url(./assets/image/bgcharts.png);
-  width: 1505px;
+  width: 100%;
   height: 540px;
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.chart__content h2, .chart__content p, button, .content-area__install-section {
-  margin-left: 165px;
- }
+.content-area__charts img {
+  margin-left: -80px;
+}
+
+.chart__content {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
 
 .chart__content h2 {
   width: 341px;
@@ -426,17 +455,17 @@ margin-left: 6px;
   font-size: 40px;
   font-weight: 600;
   line-height: 48px;
-  margin-top: 132px;
   text-align: left;
+  margin-left: -8px;
 }
 
 .chart__content p {
   line-height: 24px;
-  margin-top: 25px;
   color: var(--River-Bed);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
+  margin-left: -8px;
 }
 
 button {
@@ -447,23 +476,37 @@ button {
   color:#FFFFFF;
   font-size: 16px;
   border: none;
-  margin-top: 30px;
   cursor: pointer;
   padding-top: 4px;
   padding-left: 0px;
+  margin-top: 5px;
+  margin-left: -8px;
 }
 
-.content-area__charts img {
-  margin-top: 67px;
-  margin-left: 90px;
+.content-area__about-us {
+  width: 100%;
+  height: 787px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 6px;
+}
+
+.about-us-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  justify-content: center;
+  margin-top: 60px;
 }
 
 .about-us-content h2 {
   width: 394px;
   height: 96px;
-  margin-left: 522px;
-  margin-top: 100px;
   line-height: 48px;
+  margin-top: 40px;
 }
 
 .about-us-content p {
@@ -473,24 +516,25 @@ button {
   font-size: 18px;
   line-height: 32px;
   text-align: center;
-  margin-left: 463px;
-  margin-top: 49px;
+  margin-left: 30px;
+  margin-top: -2px;
 }
 
 .customers-feedbacks {
-  margin-left:260px ;
   display: flex;
+  height: 100px;
+  justify-content: center;
+  gap: 160px;
 }
 
 .customer-pro {
   display: flex;
-  margin-right: 148px;
-  margin-top: 30px;
   cursor: pointer;
+  margin-left: -16px;
 }
 
 .name-job {
-  margin-left: 16px;
+  margin-left: 20px;
 }
 
 .name, .job {
@@ -502,17 +546,17 @@ button {
 .name {
   font-weight: 600;
   margin-left: -1px;
+  margin-top: -1px;
 }
 
 .job {
   font-weight: 400;
   margin-top: 7px;
-  margin-left: -2px
 }
 
 .customer-ava {
-  margin-left: 1px;
-  margin-top: -4px;
+  margin-left: 6px;
+  margin-top: -7px;
 }
 
 .content-area__install-section {
@@ -521,7 +565,8 @@ button {
   height: 224px;
   border-radius: 16px;
   display: flex;
-  margin-top: 94px;
+  align-items: center;
+  justify-content: space-around;
 }
 
 h3 {
@@ -530,21 +575,16 @@ h3 {
   font-size: 32px;
   line-height: 48px;
   color: #fff;
-  margin-top: 66px;
-  margin-left: 83px;
+  margin-left: 8px;
 }
 
 .install-app {
-  margin-left: 140px;
-  margin-top: 86px;
+  display: flex;
+  gap: 27px;
+  margin-left: -10px;
 }
 
-.app-store {
-  cursor: pointer;
-}
-
-.gg-play {
-  margin-right: 20px;
+.app-store, .gg-play {
   cursor: pointer;
 }
 
