--- a/Practice01/src/index.css
+++ b/Practice01/src/index.css
@@ -527,10 +527,16 @@ button {
   gap: 160px;
 }
 
+.baseline {
+  width: 264px;
+  height: 4px;
+}
+
 .customer-pro {
   display: flex;
   cursor: pointer;
   margin-left: -16px;
+  flex-direction: column;
 }
 
 .name-job {
@@ -552,11 +558,6 @@ button {
 .job {
   font-weight: 400;
   margin-top: 7px;
-}
-
-.customer-ava {
-  margin-left: 6px;
-  margin-top: -7px;
 }
 
 .content-area__install-section {
@@ -597,20 +598,16 @@ footer {
   height: 417px;
   background-color: var(--Ebony-Clay);
   margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .footer__content {
   display: flex;
-  margin-left: 165px;
-}
-
-.company , .support, .legal, .app {
-  margin-top: 83px;
-  margin-right: 137px;
-}
-
-.support {
-  margin-right: 156px;
+  flex-flow: row;
+  justify-content: space-evenly;
+  margin-top: 12px;
 }
 
 .company ul, .support ul , .app ul {
@@ -633,11 +630,6 @@ footer {
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
-}
-
-.app {
-  margin-left: 49px;
-  margin-top: 81px;
 }
 
 h6 {
@@ -663,23 +655,24 @@ h6 {
   transform:scale(1.1);
 }
 
-.copy-right {
+.line-footer {
+  border: 0.1px solid white;
+  width: 100%;
+  fill: var(--default-white, #FFF);
+  opacity: 0.1;
+}
+
+.footer__copy-right {
   display: flex;
+  justify-content: space-around;
 }
 
 .copy-right p {
-  margin-left: 170px;
-  margin-top: 26px;
   color: #D9DBE1;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 14px;
-}
-
-.social-icon {
-  margin-left: 350px;
-  margin-top: -8px;
 }
 
 .icon {
