--- a/Practice01/src/index.css
+++ b/Practice01/src/index.css
@@ -547,10 +547,10 @@ button {
 }
 
 .baseline {
-    width: 264px;
-    height: 4px;
+    width: 100%;
+    height: 100%;
     margin-left: -20px;
-    margin-top: -20px;
+    margin-top: -30px;
 }
 
 .customer-pro {
@@ -746,4 +746,11 @@ h6 {
 .icon {
     padding: 24px 20px 24px 0;
     cursor: pointer;
+}
+
+.graph,
+.banner__logo img,
+.timeline img {
+    width: 100%;
+    height: 100%;
 }
