--- a/Practice01/src/index.css
+++ b/Practice01/src/index.css
@@ -171,11 +171,11 @@ h1 {
     font-family: 'Inter', sans-serif;
     text-align: center;
     font-weight: 700;
-    font-size: 64px;
+    font-size: 66px;
     line-height: 72px;
-    width: 766px;
+    width: 772px;
     height: 144px;
-    margin-left: -18px;
+    margin-left: -1px;
 }
 
 .banner__simple-text {
@@ -199,7 +199,7 @@ h1 {
 
 #text {
     width: 319px;
-    height: 52px;
+    height: 48px;
     border-radius: 4px 0px 0px 4px;
     background-color: #FFFFFF;
     border: 1px solid #E1E5EA;
@@ -216,12 +216,12 @@ h1 {
 
 #submit {
     width: 164px;
-    height: 56px;
+    height: 52px;
     border-radius: 0px 4px 4px 0px;
     border: 1px;
     background-color: var(--Violet);
     color: #FFFFFF;
-    margin-left: -4px;
+    margin-left: -6px;
     cursor: pointer;
     font-size: 16px;
     font-weight: 500;
@@ -236,7 +236,8 @@ button:hover {
 }
 
 .graph {
-    margin-left: -35px;
+    margin-left: -5px;
+    margin-top: -4px;
 }
 
 .banner__media-logo {
@@ -255,6 +256,7 @@ button:hover {
     color: var(--River-Bed);
     font-weight: 400;
     letter-spacing: 0em;
+    margin-top: -10px;
 }
 
 .banner__media-logo b {
@@ -268,7 +270,7 @@ button:hover {
 .banner__logo {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 8px;
+    margin-top: 6px;
 }
 
 .gg {
@@ -281,16 +283,17 @@ button:hover {
 
 .fb {
     margin-left: -6px;
-    margin-top: 2px;
+    margin-top: 5px;
 }
 
 .hub {
     margin-left: -40px;
+    margin-top: 2px;
 }
 
 .slack {
     margin-left: -75px;
-    margin-top: 2px;
+    margin-top: 4px;
 }
 
 .gg,
@@ -318,7 +321,7 @@ button:hover {
     width: 100%;
     height: 640px;
     display: flex;
-    margin-top: 38px;
+    margin-top: 35px;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -420,7 +423,8 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-left: 80px;
+    margin-left: 85px;
+    margin-top: -8px;
 }
 
 .feature {
@@ -445,8 +449,8 @@ h5 {
     font-weight: 600;
     line-height: 18px;
     color: var(--Limed-Spruce);
-    margin-top: 25px;
-    margin-left: 6px;
+    margin-top: 22px;
+    margin-left: 1px;
 }
 
 .content-area__charts {
@@ -615,7 +619,11 @@ h3 {
 .install-app {
     display: flex;
     gap: 27px;
-    margin-left: -10px;
+    margin-left: -15px;
+}
+
+.app-store {
+  margin-left: -2px
 }
 
 .app-store,
@@ -696,11 +704,15 @@ h6 {
 }
 
 .app {
-    margin-left: 40px;
+    margin-left: 35px;
+}
+
+.footer__install-app img {
+  margin-left: -2px;
 }
 
 .footer__gg-play {
-    margin-bottom: 16px;
+    margin-bottom: 11px;
     cursor: pointer;
 }
 
