--- a/Practice01/src/index.css
+++ b/Practice01/src/index.css
@@ -3,12 +3,6 @@
 @import url("../src/style/abstracts/varibles.css");
 
 
-.container {
-    width: 1440px;
-    height: auto;
-    font-family: 'Inter', sans-serif;
-    margin: auto;
-}
 
 body {
     font-family: 'Inter', sans-serif;
@@ -20,6 +14,7 @@ body {
     height: 800px;
     border: 1px;
     margin-top: -9px;
+    background-repeat: round;
 }
 
 header {
@@ -316,17 +311,19 @@ button:hover {
     width: 100%
 }
 
-.content-area__intro-product {
+.product {
     background-image: url(./assets/image/bgintro.png);
-    width: 100%;
+    background-repeat: no-repeat;
+    width: 1440px;
     height: 640px;
     display: flex;
     margin-top: 35px;
     justify-content: space-evenly;
     align-items: center;
+    margin: auto;
 }
 
-.content-area__intro-product p {
+.product p {
     color: var(--River-Bed);
     font-size: 16px;
     font-style: normal;
@@ -348,7 +345,7 @@ button:hover {
     margin-left: -16px;
 }
 
-.advantage {
+.product__content {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -372,9 +369,9 @@ button:hover {
 
 .survey-feature,
 .ad-feature,
-.feature img,
-.feature h5,
-.feature p {
+.feature__descripstion img,
+.feature__descripstion h5,
+.feature__descripstion p {
     cursor: pointer;
 }
 
@@ -407,19 +404,21 @@ h2 {
     font-style: normal;
 }
 
-.content-area__functions {
+.functions__container {
     display: flex;
     flex-direction: column;
     height: 648px;
     align-items: center;
     justify-content: space-around;
+    width: 1440px;
+    margin: auto;
 }
 
-.functions-heading {
+.functions__headline {
     margin-top: 100px;
 }
 
-.feature__container {
+.feature {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -427,14 +426,14 @@ h2 {
     margin-top: -8px;
 }
 
-.feature {
+.feature__descripstion {
     width: 23%;
     display: inline-block;
     padding: 36px;
     margin: 2px 10px 10px 2px;
 }
 
-.feature p {
+.feature__descripstion p {
     font-family: 'Inter', sans-serif;
     font-weight: 400px;
     font-size: 16px;
@@ -453,7 +452,7 @@ h5 {
     margin-left: 1px;
 }
 
-.content-area__charts {
+.charts {
     margin-top: 52px;
     background-image: url(./assets/image/bgcharts.png);
     width: 100%;
@@ -463,7 +462,7 @@ h5 {
     align-items: center;
 }
 
-.content-area__charts img {
+.charts img {
     margin-left: -80px;
 }
 
@@ -508,7 +507,7 @@ button {
     margin-left: -8px;
 }
 
-.content-area__about-us {
+.about-us {
     width: 100%;
     height: 787px;
     display: flex;
@@ -518,7 +517,7 @@ button {
     gap: 6px;
 }
 
-.about-us-content {
+.about-us__content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -527,12 +526,12 @@ button {
     margin-top: 60px;
 }
 
-.about-us-content h2 {
+.about-us__content h2 {
     line-height: 48px;
     margin-top: 40px;
 }
 
-.about-us-content p {
+.about-us__content p {
     width: 543px;
     height: 96px;
     font-weight: 400;
@@ -597,7 +596,7 @@ button {
     margin-left: -3px;
 }
 
-.content-area__install-section {
+.install-section {
     background-image: url(./assets/image/install-section.png);
     width: 1110px;
     height: 224px;
@@ -607,7 +606,7 @@ button {
     justify-content: space-around;
 }
 
-.install-section-heading {
+.install-section-headline {
     width: 423px; 
     height: 96px;
 }
@@ -649,6 +648,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .footer__content {
