--- a/Practice01/src/style/index.css
+++ b/Practice01/src/style/index.css
@@ -1,6 +1,6 @@
-@import url("../src/style/base/reset.css");
-@import url("../src/style/base/typo.css");
-@import url("../src/style/abstracts/varibles.css");
+@import url("./base/reset.css");
+@import url("./base/typo.css");
+@import url("./abstracts/varibles.css");
 
 
 
@@ -9,15 +9,22 @@ body {
     color: var(--Limed-Spruce);
 }
 
-.banner {
-    background-image: url(./assets/image/bgbanner.png);
-    height: 800px;
-    border: 1px;
-    margin-top: -9px;
-    background-repeat: round;
+.container {
+    width: 1440px;
+    margin: auto;
 }
 
-header {
+.banner {
+    background-image: url(../assets/image/bgbanner.png);
+    border: 1px;
+    margin-top: -9px;
+    background-repeat: no-repeat;
+    height: 1485px;
+    margin-top: -9px;
+    background-size: 100% 57%;
+}
+
+.container {
     display: flex;
     align-items: center;
     height: 160px;
@@ -134,7 +141,7 @@ a.active {
     height: 32px;
     text-align: center;
     background-color: #81C43B;
-    color: white;
+    color: var(--white);
     z-index: 1;
     position: sticky;
     margin-left: 11px;
@@ -196,7 +203,7 @@ a.active {
     width: 319px;
     height: 48px;
     border-radius: 4px 0px 0px 4px;
-    background-color: #FFFFFF;
+    background-color: var(--white);
     border: 1px solid #E1E5EA;
 }
 
@@ -215,7 +222,7 @@ a.active {
     border-radius: 0px 4px 4px 0px;
     border: 1px;
     background-color: var(--Violet);
-    color: #FFFFFF;
+    color: var(--white);
     margin-left: -6px;
     cursor: pointer;
     font-size: 16px;
@@ -307,15 +314,10 @@ button:hover {
     transform: scale(1.3);
 }
 
-.content-area {
-    width: 100%
-}
-
 .product {
-    background-image: url(./assets/image/bgintro.png);
-    background-repeat: no-repeat;
-    width: 1440px;
-    height: 640px;
+    background-image: url(../assets/image/bgintro.png);
+    background-repeat: round;
+    height: 631px;
     display: flex;
     margin-top: 35px;
     justify-content: space-evenly;
@@ -404,7 +406,7 @@ h2 {
     font-style: normal;
 }
 
-.functions__container {
+.functions {
     display: flex;
     flex-direction: column;
     height: 648px;
@@ -454,7 +456,7 @@ h5 {
 
 .charts {
     margin-top: 52px;
-    background-image: url(./assets/image/bgcharts.png);
+    background-image: url(../assets/image/bgcharts.png);
     width: 100%;
     height: 540px;
     display: flex;
@@ -497,7 +499,7 @@ button {
     height: 52px;
     border-radius: 4px;
     background-color: #796EFF;
-    color: #FFFFFF;
+    color: var(--white);
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -597,7 +599,7 @@ button {
 }
 
 .install-section {
-    background-image: url(./assets/image/install-section.png);
+    background-image: url(../assets/image/install-section.png);
     width: 1110px;
     height: 224px;
     border-radius: 16px;
@@ -616,8 +618,9 @@ h3 {
     font-weight: 600;
     font-size: 32px;
     line-height: 48px;
-    color: #fff;
+    color: var(--white);
     margin-left: 8px;
+    width: 423px;
 }
 
 .install-app {
@@ -683,7 +686,7 @@ footer {
 .support ul li a,
 .legal ul li a {
     text-decoration: none;
-    color: #fff;
+    color: var(--white);
     font-weight: 400;
     font-size: 16px;
     line-height: 16px;
@@ -704,7 +707,7 @@ h6 {
     font-weight: 600;
     font-size: 16px;
     line-height: 16px;
-    color: #fff;
+    color: var(--white);
     margin-bottom: 24px;
 }
 
@@ -732,9 +735,9 @@ h6 {
 }
 
 .line-footer {
-    border: 0.1px solid white;
+    border: 0.1px solid var(--white);
     width: 100%;
-    fill: var(--default-white, #FFF);
+    color: var(--white);
     opacity: 0.1;
     margin-top: 5px;
 }
